for normal : 一次添加多个成就

--- a/Application/Home/View/News/news.html
+++ b/Application/Home/View/News/news.html
@@ -21,7 +21,7 @@
             您的位置：
             <a href="__ROOT__">首页</a>
             <sapn>&nbsp;>&nbsp;</sapn>
-            <a href="{:U('News/newslist')}">信息咨询</a>
+            <a href="{:U('News/newslist')}">信息资讯</a>
             <sapn>&nbsp;>&nbsp;</sapn>
             <?php if ($info['type'] == 0): ?>
                 <a href="#">政策法规</a>
