--- a/Application/Home/View/Public/nav.html
+++ b/Application/Home/View/Public/nav.html
@@ -47,7 +47,7 @@
             <a href="{:U('Team/teamlist')}">专家团队</a>
             <div class="nav-list">
                  <p>
-                    <a href="{:U('Expert/expertlist')}">专家团队信息</a>
+                    <a href="{:U('Expert/expertlist')}">团队信息</a>
                 </p>
                 <p>
                     <a href="{:U('Expert/expertlist')}">专家信息</a>
