--- a/Application/Master/View/Download/add_modify.html
+++ b/Application/Master/View/Download/add_modify.html
@@ -72,7 +72,7 @@
 				<div class="col-xs-10">
 					<input  type="file" id="download_files" name="zip" >
 					<span id="uploadTip"></span><br>
-					<span >最大20M ，支持 .txt, .doc, .docx, .xls, .xlsx, .ppt, .pptx, .pdf,.zip, .rar, .7z, 格式文件</span>
+					<span >最大20M ，支持 .txt, .doc, .docx, .xls, .xlsx, .ppt, .pptx,.zip, .rar, .7z, 格式文件</span>
 				</div>
 			</div>
 		</form>
