--- a/Application/Master/View/Index/index.html
+++ b/Application/Master/View/Index/index.html
@@ -60,26 +60,22 @@
 					<li role="presentation"><a href="{:U('Master/Download/add_modify')}">添加文件</a></li>
 
 					<!-- 信息咨询 -->
-					<li role="presentation"><a class="title"><span class="glyphicon glyphicon-tag"></span>信息咨询</a></li>
-					<li role="presentation"><a href="{:U('Master/News/news_list',array('type'=>3))}">政策法规</a></li>
-					<li role="presentation"><a href="{:U('Master/News/news_list',array('type'=>1))}">市场动态</a></li>
-					<li role="presentation"><a href="{:U('Master/News/news_list',array('type'=>2))}">业内资讯</a></li>
-					<li role="presentation"><a href="{:U('Master/News/add_modify')}">发布信息</a></li>
+					<li role="presentation"><a class="title"><span class="glyphicon glyphicon-tag"></span>信息资讯</a></li>
+
+					<li role="presentation"><a href="{:U('Master/News/news_list')}">信息列表</a></li>
+					<li role="presentation"><a href="{:U('Master/News/add_modify')}">添加资讯信息</a></li>
 
 					<!-- 教育培训 -->
 					<li role="presentation"><a class="title"><span class="glyphicon glyphicon-tag"></span>教育培训</a></li>
-					<li role="presentation"><a href="{:U('Master/Edu/edu_list',array('type'=>3))}">学历教育</a></li>
-					<li role="presentation"><a href="{:U('Master/Edu/edu_list',array('type'=>1))}">职业资格教育</a></li>
-					<li role="presentation"><a href="{:U('Master/Edu/edu_list',array('type'=>2))}">技能培训</a></li>
-					<li role="presentation"><a href="{:U('Master/Edu/add_modify')}">发布信息</a></li>
+					 <li role="presentation"><a href="{:U('Master/Edu/edu_list')}">信息列表</a></li>
+
+					<li role="presentation"><a href="{:U('Master/Edu/add_modify')}">发布培训信息</a></li>
 
 
 					<!-- 协同管理 -->
 					<li role="presentation"><a class="title"><span class="glyphicon glyphicon-tag"></span>协同管理</a></li>
-					<li role="presentation"><a href="{:U('Master/Cooperation/coo_list',array('type'=>3))}">协同高校</a></li>
-					<li role="presentation"><a href="{:U('Master/Cooperation/coo_list',array('type'=>1))}">行业协会</a></li>
-					<li role="presentation"><a href="{:U('Master/Cooperation/coo_list',array('type'=>2))}">协同企业</a></li>
-					<li role="presentation"><a href="{:U('Master/Cooperation/add_modify')}">发布信息</a></li>
+					<li role="presentation"><a href="{:U('Master/Cooperation/coo_list')}">协同信息列表</a></li>
+					<li role="presentation"><a href="{:U('Master/Cooperation/add_modify')}">发布协同信息</a></li>
 					
 					<!-- 杂项 -->
 					<li role="presentation"><a class="title"><span class="glyphicon glyphicon-tag"></span>杂项</a></li>
