cahnge size of banner image and fix a bug of show banner

--- a/Application/Home/View/Expert/expertlist.html
+++ b/Application/Home/View/Expert/expertlist.html
@@ -83,9 +83,9 @@
         <div class="leftmain">
             <div class="mainlefttitle"><img src="__PUBLIC__/images/科技团队.png"></div>
             <div class="mainbtn">
-                <div class="navlist table_head active" >
+               <!--  <div class="navlist table_head active" >
                     <a href="#">专家团队</a>
-                </div>
+                </div> -->
                 <div class="navlist ">
                     <a href="{:U('Team/teamlist')}">团队信息</a>
                 </div>
