--- a/Application/Home/View/Team/teamlist.html
+++ b/Application/Home/View/Team/teamlist.html
@@ -103,9 +103,9 @@
                     <?php endif ?>                    
                 </div>
                 <div class="mainbtn">
-                <div class="navlist table_head active" >
+              <!--   <div class="navlist table_head active" >
                     <a href="#">专家团队</a>
-                </div>
+                </div> -->
                 <div class="navlist active">
                     <a href="{:U('Team/teamlist')}">团队信息</a>
                 </div>
