--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -147,6 +147,8 @@
     <script>
         $(function(){
 
+            var timer;
+
             $('#nav_index').addClass('nav_active').siblings().removeClass('nav_active');
            
             function nextImg () {
@@ -164,10 +166,14 @@
                 $(".control .control-btn").siblings().removeClass("focus");
                 $(".control .control-btn").eq((btnNum+1)%3).addClass("focus");
             }
-            setInterval(nextImg,5000);
+            timer = setInterval(nextImg,5000);
 
             var animateEnd = 1;
             $('.control-btn').click(function(){
+
+                clearInterval(timer);
+                timer = null;
+
                 if(animateEnd == 1){ // 表示图片不在切换
                     $(this).addClass('focus').siblings().removeClass('focus');
                     var nextIndex = $(this).index();
@@ -214,6 +220,9 @@
                         }
                     }
                 }
+
+                timer = setInterval(nextImg,5000);
+
             });
         });
         $(function(){
