--- a/Public/css/home/nav.css
+++ b/Public/css/home/nav.css
@@ -69,14 +69,14 @@ a{
 .nav-list{
 	position: absolute;
 	width: 122px;
-	top: 50px;
+	top: 49px;
 	left: 0;
 	z-index: 100;
 	background: #F7F7F7;
 	text-align: center;
 	display: none;
 }
-.nav-tip:hover{
+.nav-tip:hover:hover{
 	background: #146FBD;
 }
 .nav-tip:hover .nav-list{
@@ -105,33 +105,32 @@ a{
 
 /* 登录窗 */
 #login_bg{
-	position: fixed;
-	top: 0;
-	left: 0;
 	width: 100%;
-	height: 0;
+	min-height: 100%;
+	position: fixed;
+	top: -100%;
+	left: 0;
+	z-index: 999;
 	background: rgba(80,80,80,0.5);
 	-webkit-transition: all .3s linear;
 	-o-transition: all .3s linear;
 	-ms-transition: all .3s linear;
 	transition: all .3s linear;
-	opacity: 0;
-	z-index: -1;
 }
-.login_show{
-	z-index: 999 !important;
-	height: 100% !important;
-	opacity: 1 !important;
-}
-
 #login_container{
 	width: 700px;
 	height: 456px;
-	margin: 0 auto;
-	margin-top: 150px;
 	background: url(../../images/login_page.png);
-	position: relative;
+	position: fixed;
+	top: -100%;
+	left: 50%;
+	margin-left: -350px;
+	-webkit-transition: top .3s linear;
+	-o-transition: top .3s linear;
+	-ms-transition: top .3s linear;
+	transition: top .3s linear; 
 }
+
 #login_form{
 	width: 350px;
 	height: 280px;
@@ -144,8 +143,9 @@ a{
 	margin: 40px 0 20px 0;
 }
 #login_form input{
-    height: 40px;
     width: 300px;
+    height: 40px;
+    line-height: 40px;
     font-size: 18px;
     margin: 5px 0;
     padding-left: 25px;
@@ -170,6 +170,7 @@ a{
 	font-size: 20px;
 	font-weight: bold;
 	font-family: "microsoft Yahei";
+	vertical-align: middle;
 	background-image: linear-gradient(to bottom,#5dc3fe,#0574c1);
 	border-radius: 5px;
 	cursor: pointer;
@@ -187,23 +188,23 @@ a{
     color: #234;
 }
 #login_close{
-	position: absolute;
-	text-align: center;
 	width: 24px;
 	height: 24px;
+	line-height: 24px;
+	font-size: 20px;
 	border: 2px solid #000;
 	border-radius: 50%;
+	text-align: center;
+	position: absolute;
 	top: -12px;
 	right: -12px;
-	cursor: pointer;
-	font-size: 20px;
 	background: #fff;
+	cursor: pointer;
 }
 #login_close:hover{
 	background: #ddd;
 	color: #fff;
 }
-
 
 #bottombox{
 	width: 100%;
@@ -219,6 +220,7 @@ a{
 }
 #bottom p{
 	font-size: 12px;
+	/*line-height: 20px;*/
 }
 #bottom a{
 	color: #000;
