--- a/Application/Home/View/Expert/expertlist.html
+++ b/Application/Home/View/Expert/expertlist.html
@@ -149,7 +149,7 @@
                                     <button>我要联系</button><br>
                                 </a>
                                 <?php if (session('type') == 1): ?>
-                                    <a href="{:U('Public/joinTeam',array('id'=>$list['id']))}">
+                                    <a href="{:U('Expert/joinTeam',array('id'=>$list['id']))}">
                                         <button>邀请加入团队</button>
                                     </a>
                                 <?php else: ?>
