--- a/Application/Home/View/Public/link.html
+++ b/Application/Home/View/Public/link.html
@@ -21,11 +21,9 @@
 		.line input{
 			width: 400px;
 			height: 30px;
-			border-width: 2px;
-			margin-left: -18px;
 		}
-		span{
-		    width:120px;
+		.line>span{
+		    width:100px;
 		    font-size:18px;
 		    display: inline-block;
 		}
@@ -35,6 +33,10 @@
 			white-space: nowrap;
 		    overflow: hidden;
 		    text-overflow:ellipsis;
+		}
+		em{
+			color: red;
+			font-weight: bold;
 		}
 		.textarea{
 		    position: relative;
@@ -47,8 +49,7 @@
 		.textarea textarea{
 		    width:400px;
 		    height:120px;
-		    margin-left:108px;
-		    border-width: 2px;
+		    margin-left:105px;
 		}
 		.sub{
 		    margin-top:10px;
@@ -65,7 +66,7 @@
 			color: #fff;
 		}
 	</style>
-	<!-- [if IE lt 10] -->
+	<!-- [if IE lt 9] -->
         <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
     <!-- [endif] -->
 </head>
@@ -74,12 +75,12 @@
 	<div class="link-main">
 		<!-- <h2>对接类型</h2> -->
 		<form action="{:U('Public/dolink')}" method="post" enctype="multipart/form-data">
-			<div class="line" style="text-align:center;">
-				<span>{$linkInfo.linkTip}</span>
+			<div class="line" style="text-align:center;font-size:18px;">
+				{$linkInfo.linkTip}
 			</div>
 			<div class="line">
 				<span>标题</span>
-				<input type="text" name="title" id="title">
+				<input type="text" name="title" id="title" required="required"><em>*</em>
 			</div>
 			<div class="textarea">
 				<span for="content">对接说明</span>
@@ -101,9 +102,9 @@
 </body>
 <script>
 	(function(){
-	    var bodyHeight = document.body.innerHeight;
+	    var bodyHeight = document.body.clientHeight;
 	    var bottombox = document.getElementById('bottombox');
-	    var contentHeight = document.getElementsByClassName('link-main')[0].innerHeight;
+	    var contentHeight = document.getElementsByClassName('link-main')[0].clientHeight;
 	    if((bodyHeight-contentHeight-130)>60){
 	        bottombox.className="buttom_fixed";
 	    }
