--- a/Application/Home/View/Team/team.html
+++ b/Application/Home/View/Team/team.html
@@ -7,22 +7,6 @@
     
     <link rel="stylesheet" href="__PUBLIC__/css/home/research.css">
     <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
-    <style>
-        button{
-            background: #72CEDD;
-            color: #FAFDFD;
-            font-weight: 700;
-            border: 2px solid #0999B1;
-            border-radius: 5px;
-            padding: 5px 10px;
-            cursor: pointer;
-            margin-top: 10px;
-        }
-        button:hover{
-            background: #0F93A9;
-            color: white;
-        }
-    </style>
     <!-- [if IE lt 10] -->
         <link rel="stylesheet" href="__PUBLIC__/css/home/ltIE8.css">
     <!-- [endif] -->
@@ -32,12 +16,15 @@
     <include file="Public/nav" />
 
     <div class="main">
-        <img src="__PUBLIC__/images/download_06.png">
-        <span>您的位置：</span>
-        <a href="__ROOT__">首页</a>
-        <span>></span>
-        <a href="{:U('Team/teamlist')}">团队信息</a>
-        <span>>&nbsp;团队信息</span>
+        <div id="position">
+            <img src="__PUBLIC__/images/download_06.png">
+            <span>您的位置：</span>
+            <a href="__ROOT__">首页</a>
+            <span>></span>
+            <a href="{:U('Team/teamlist')}">团队信息</a>
+            <span>>&nbsp;团队信息</span>
+        </div>
+        
         
         <h3 class="caption">团队信息</h3>
         <table>
@@ -71,11 +58,11 @@
                 <td colspan="2" class="link_img">
                     <?php if (session('uid')): ?>
                         <a href="{:U('Public/link',array('id'=>$teamInfo['teamid'] ,'linkType'=>2))}" target="_black">
-                            <button>我要联系</button>
+                            <button class="result_link">我要联系</button>
                         </a>
                     <?php else: ?>
                         <a  onclick="showLogin()">
-                            <button>我要联系</button>
+                            <button class="result_link">我要联系</button>
                         </a>
                     <?php endif ?>
                 </td>
