change min-height from 600/500px to 300px

--- a/Application/Home/View/Public/loading.html
+++ b/Application/Home/View/Public/loading.html
@@ -31,6 +31,7 @@
         </h1>
     </div>
     <include file="Public/footer"/>
+    <script src="__PUBLIC__/js/personal_id_body.js"></script>
 </body>
 
 </html>
