remove test tag

--- a/Application/Home/View/Result/result.html
+++ b/Application/Home/View/Result/result.html
@@ -165,7 +165,7 @@
                 <!-- 团队成果 -->
                 <?php if($resultInfo['isteam'] == 1):?>
                     <tr>
-                        <td class="tip">姓名 isteam</td>
+                        <td class="tip">姓名</td>
                         <td class="owner_info">{$ownerInfo.realname}</td>
                       
                         <td class="tip">办公电话</td>
@@ -186,7 +186,7 @@
                 <?php else: ?>
                     <?php if($title['type'] == 1):?>
                         <tr>
-                            <td class="tip">姓名type == 1</td>
+                            <td class="tip">姓名</td>
                             <td class="owner_info">{$title.realname}</td>
                           
                             <td class="tip">办公电话</td>
