--- a/Application/Home/View/Personal/my_research.html
+++ b/Application/Home/View/Personal/my_research.html
@@ -35,8 +35,11 @@
 		}
 		.name>a{
 			color: #101010;
-			font-weight: bold;
-			font-size: 18px;
+			display: inline-block;
+			max-width: 700px;
+			white-space: nowrap;
+		    overflow: hidden;
+		    text-overflow:ellipsis;
 		}
 		.name>a:hover{
 			color: #1B8DEF;
