--- a/Application/Master/View/Index/welcome.html
+++ b/Application/Master/View/Index/welcome.html
@@ -30,7 +30,7 @@
 			<h1>欢迎使用<small>后台管理</small></h1>
 			<div id="main">
 				<p class="lead">现在时间
-					<?php echo date( 'Y-m-d'); ?>
+					<?php echo date( 'Y-m-d H:m:s'); ?>
 				</p>
 			</div>
 		</div>
