--- a/Public/css/home/personal.css
+++ b/Public/css/home/personal.css
@@ -1,7 +1,19 @@
 /*  create by cm  */
-*{
-	padding: 0;
+a, abbr, acronym, address, applet, article, aside, audio, b,body,button, 
+canvas, caption, cite, code,datalist, dd, del, details, dl, div, dt, 
+em, embed, fieldset,footer, form, 
+h1, h2, h3, h4, h5, h6, header, html, 
+i, iframe, img, label, legend, li, 
+meter, nav, object, ol, output, p, pre, progress, q, 
+s, samp, section, small, span, source, strike, strong, sub, sup, 
+table, tbody, tfoot, thead, th, tr, tt, u, ul{
 	margin: 0;
+	padding: 0;
+}
+html,body{
+	font-family:"microsoft Yahei"; 
+	width: 100%;
+	height: 100%;
 }
 a{
 	color: #fff;
@@ -28,7 +40,6 @@ ul{
 	text-decoration: none;
 	color: #1292BF;
 	font-size: 20px;
-	font-weight: bold;
 	margin-right: 20px;
 }
 #nav{
