--- a/Public/css/home/signup.css
+++ b/Public/css/home/signup.css
@@ -19,10 +19,16 @@ label{
     width:400px;
     height:30px;
     line-height: 30px;
+    padding: 0 10px;
+    box-sizing: border-box;
+    font-size: 16px;
 }
 input[type=radio]{
     width: 18px;
     height: 18px;
+}
+input:read-only{
+    background: #E4D8D8;
 }
 .upload{
     width:400px;
